Many small bug fixes
git-svn-id: svn://www.proteomecommons.org/svn/MassSieve/dev@76 6cef8090-e22d-0410-a575-d54c6630a075